--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1041,6 +1041,44 @@ a.link {
       padding-right: 0!important;
     }
   }
+  .item-history {
+    .card-body {
+      font-size: $font-size-xs;
+      .head {
+        font-size: $font-size-xs;
+        .labels {
+          b {
+            font-size: $font-size-xs;
+          }
+        }
+        .label {
+          font-size: $font-size-base;
+          font-weight: $font-weight-bold;
+          text-transform: uppercase;
+        }
+      }
+      h3 {
+        font-size: $font-size-base;
+        min-height: 2rem;
+      }
+    }
+  }
+  .item-sub-history {
+    h4 {
+      font-size: $font-size-sm;
+    }
+    p {
+      font-size: $font-size-xs;
+    }
+    hr {
+      margin: 0;
+      border-top: 1px solid #c1bdbd;
+    }
+    .card-body {
+      font-size: $font-size-xs;
+      padding: rem(15);
+    }
+  }
 }
 
 @include media-breakpoint-down(sm) {
@@ -1172,6 +1210,44 @@ a.link {
     label {
       font-size: $font-size-xs;
       padding-right: 0!important;
+    }
+  }
+  .item-history {
+    .card-body {
+      font-size: $font-size-xs;
+      .head {
+        font-size: $font-size-xs;
+        .labels {
+          b {
+            font-size: $font-size-xs;
+          }
+        }
+        .label {
+          font-size: $font-size-base;
+          font-weight: $font-weight-bold;
+          text-transform: uppercase;
+        }
+      }
+      h3 {
+        font-size: $font-size-base;
+        min-height: 2rem;
+      }
+    }
+  }
+  .item-sub-history {
+    h4 {
+      font-size: $font-size-sm;
+    }
+    p {
+      font-size: $font-size-xs;
+    }
+    hr {
+      margin: 0;
+      border-top: 1px solid #c1bdbd;
+    }
+    .card-body {
+      font-size: $font-size-xs;
+      padding: rem(15);
     }
   }
 }
