修改新闻详情页发布时间字体粗细

--- a/styles/news.scss
+++ b/styles/news.scss
@@ -15,7 +15,7 @@
       color: $silver;
     }
     .published-at {
-      font-weight: bold;
+      font-weight: normal;
       color: $silver;
     }
   }
