英文版首页竞赛状态对齐问题

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -24,6 +24,8 @@
   .home-event-status {
     span {
       font-size: $font-size-xs;
+      display: inline-block;
+      width: 3rem;
     }
   }
   .htitle {
