--- a/styles/common.scss
+++ b/styles/common.scss
@@ -74,6 +74,7 @@ h1, h2, h3, h4, h5, h6 {
   img {
     position: absolute;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
