footer 加入微信/微博

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 50px 0;
+  padding: 65px 0 45px;
   box-sizing: border-box;
   background: $black;
   span, a, p {
@@ -12,10 +12,79 @@
   a:hover {
     text-decoration: underline;
   }
+  .contact {
+    flex-wrap: wrap;
+    span {
+      margin-top: rem(10);
+      line-height: rem(24);
+    }
+  }
+  .share, ul.list-inline {
+    display: inline-block;
+  }
+  .share {
+    margin-right: 30px;
+    position: relative;
+    top: 4px;
+    a {
+      cursor: pointer;
+      position: relative;
+      display: inline-block;
+      width: 26px;
+      height: 26px;
+      background: url(../images/icon-share.png) no-repeat left;
+      background-size: auto 52px;
+      &:hover {
+        div {
+          opacity: 1;
+          transform: scale(1);
+          top: -200px - 10px;
+          z-index: 999;
+        }
+      }
+      div {
+        opacity: 0;
+        transition: all .2s;
+        transform: scale(.9);
+        position: absolute;
+        top: -200px;
+        left: -100px + 13px;
+        z-index: -1;
+        img {
+          width: 200px;
+          height: 200px;
+        }
+      }
+    }
+    .button-tsina {
+      background-position: 0 0;
+      &:hover {
+        background-position: 0 -26px;
+      }
+    }
+    .button-weixin {
+      background-position: -36px 0;
+      &:hover {
+        background-position: -36px -26px;
+      }
+    }
+
+  }
 }
 
 @include media-breakpoint-down(md) {
   .footer {
+    .share, ul.list-inline {
+      display: block;
+      text-align: center;
+    }
+    .share {
+      margin-right: 0;
+      margin-bottom: rem(20);
+      a {
+        margin: 0 rem(13);
+      }
+    }
     ul {
       text-align: center;
       margin-bottom: 1.5rem;
