手机端首页主次新闻标题大小不一致问题，大小参考较小的字体

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1111,6 +1111,17 @@ a.link {
       bottom: -.3rem;
     }
   }
+  .list-news {
+    .column-middle {
+      .card {
+        .card-body {
+          .title {
+            font-size: $font-size-base;
+          }
+        }
+      }
+    }
+  }
   .item-judge-container {
     margin-bottom: rem(20)!important;
     .card-body {
