--- a/styles/news.scss
+++ b/styles/news.scss
@@ -33,6 +33,10 @@
       font-size: $font-size-xs;
     }
   }
+  .news-detail-ad {
+    background: #DEDEDE;
+    padding-top: rem(16);
+  }
 }
 
 @include media-breakpoint-down(md) {
