--- a/styles/common.scss
+++ b/styles/common.scss
@@ -825,6 +825,7 @@ a.link {
         width: 110px;
         height: 50px;
         line-height: 50px;
+        padding: 0 0.5rem;
         text-align: center;
         display: block;
         color: $black;
