--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,7 +5,8 @@ $link-color: #000;
 $font-size-base: 1rem; // 16px
 $font-size-xs: 0.75rem; // 14px
 $font-size-sm: 0.875rem; // 12px
-$font-size-lg: 1.5rem; //24px
+$font-size-lg: 1.5rem; // 24px
+$font-size-xl: 1.75rem; // 28px
 $h1-font-size: $font-size-base * 2.5 !default;
 $h2-font-size: $font-size-base * 2 !default;
 $h3-font-size: $font-size-base * 1.25 !default;
