--- a/styles/news.scss
+++ b/styles/news.scss
@@ -1,4 +1,7 @@
 .news-detail {
+  h1 {
+    font-size: $font-size-xl;
+  }
   .header {
     img {
       height: auto;
@@ -25,7 +28,7 @@
   .news-detail {
     h1 {
       font-weight: bold;
-      font-size: $font-size-base;
+      font-size: $font-size-xl;
       line-height: 1.6;
       margin-bottom: 0;
     }
@@ -42,7 +45,7 @@
 @include media-breakpoint-down(md) {
   .news-detail {
     h1 {
-      font-size: $font-size-base;
+      font-size: $font-size-xl;
       line-height: 1.6;
     }
   }
