新闻页标题头图间距和手机版标题大小

--- a/styles/news.scss
+++ b/styles/news.scss
@@ -28,7 +28,7 @@
   .news-detail {
     h1 {
       font-weight: bold;
-      font-size: $font-size-xl;
+      font-size: $font-size-base;
       line-height: 1.6;
       margin-bottom: 0;
     }
