竞赛和新闻返回顶部按钮

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -171,6 +171,10 @@ a.link {
   box-shadow: 0 0 5px grey;
 }
 
+.scroll-to-top-btn:hover {
+  color: #e8e8e8;
+}
+
 .icon {
   width: 18px;
   height: 18px;
