--- a/styles/main.scss
+++ b/styles/main.scss
@@ -99,7 +99,7 @@ $input-btn-padding-y-lg: 1rem;
 $input-bg: #f3f4f4;
 $input-color: $body-grey;
 $input-border-color: #aea8a8;
-$input-placeholder-color: $silver;
+$input-placeholder-color: $grey;
 $form-group-margin-bottom: .8rem;
 $custom-select-bg: $input-bg;
 $custom-file-height: 4rem;
