国家城市自动完成

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1357,3 +1357,36 @@ a.link {
     }
   }
 }
+
+span.twitter-typeahead {
+
+  .tt-menu {
+    @extend .dropdown-menu;
+  }
+
+  .tt-suggestion {
+    @extend .dropdown-item;
+  }
+
+  .tt-suggestion.tt-cursor {
+    @extend .dropdown-item.active;
+  }
+
+  .input-group & {
+    display: flex !important;
+    align-items: center;
+    position: relative;
+    flex: 1 1 auto;
+    width: 1%;
+
+    .tt-menu, .tt-hint, .tt-input {
+      width: 100%;
+    }
+  }
+}
+
+.input-group-lg .twitter-typeahead {
+  .form-control {
+    @extend .form-control-lg;
+  }
+}
