使用FontAwesome5的css, 禁用JS

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'DIN';
-  src: url('../font/DIN-Regular.otf');
+  src: url('../webfonts/DIN-Regular.otf');
   font-weight: normal;
 }
 @font-face {
   font-family: 'DIN';
-  src: url('../font/DIN-Bold.otf');
+  src: url('../webfonts/DIN-Bold.otf');
   font-weight: bold;
 }
 h1, h2, h3, h4, h5, h6 {
