--- a/styles/common.scss
+++ b/styles/common.scss
@@ -66,6 +66,9 @@ h1, h2, h3, h4, h5, h6 {
 .custom-file-label {
   font-size: 1rem;
   color: $body-color;
+  .placeholder {
+    color: $input-placeholder-color;
+  }
 }
 
 .custom-file-container {
