英文版按钮字符间距

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -157,6 +157,10 @@ a.link {
   text-indent: 0.3rem;
 }
 
+.lang-en .btn-common {
+  letter-spacing: 0 !important;
+}
+
 .scroll-to-top-btn {
   position: fixed;
   right: 2rem;
