--- a/styles/share.scss
+++ b/styles/share.scss
@@ -1,39 +1,42 @@
-.share {
-  .jiathis_style_32x32 .jiathis_txt {
-    margin-left: 10px;
-  }
-  .jiathis_style_32x32 .jtico {
+.share-container {
+  .hshare {
     background: url(../images/icon-share.png) no-repeat left;
     background-size: auto 64px;
-  }
-  .jiathis_style_32x32 .jtico_tsina {
-    background-position: 0 0;
-    &:hover {
-      background-position: 0 -32px;
+    width: 32px;
+    height: 32px;
+    margin-left: 0.25rem;
+    img {
+      display: none;
     }
-  }
-  .jiathis_style_32x32 .jtico_weixin {
-    background-position: -44px 0;
-    &:hover {
-      background-position: -44px -32px;
+    &.weibo {
+      background-position: 0 0;
+      &:hover {
+        background-position: 0 -32px;
+      }
     }
-  }
-  .jiathis_style_32x32 .jtico_qzone {
-    background-position: -89px 0;
-    &:hover {
-      background-position: -89px -32px;
+    &.wechat {
+      background-position: -44px 0;
+      &:hover {
+        background-position: -44px -32px;
+      }
     }
-  }
-  .jiathis_style_32x32 .jtico_fb {
-    background-position: -134px 0;
-    &:hover {
-      background-position: -134px -32px;
+    &.qzone {
+      background-position: -89px 0;
+      &:hover {
+        background-position: -89px -32px;
+      }
     }
-  }
-  .jiathis_style_32x32 .jtico_twitter {
-    background-position: -178px 0;
-    &:hover {
-      background-position: -178px -32px;
+    &.facebook {
+      background-position: -134px 0;
+      &:hover {
+        background-position: -134px -32px;
+      }
+    }
+    &.twitter {
+      background-position: -178px 0;
+      &:hover {
+        background-position: -178px -32px;
+      }
     }
   }
 }
