个人中心竞赛列表副标题样式优化

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -390,8 +390,10 @@ a.link {
         text-transform: uppercase;
       }
     }
-    h3 {
+    h4 {
       font-weight: bold;
+      line-height: 1.4rem;
+      height: 4rem;
       color: $black;
     }
     .action {
