--- a/styles/common.scss
+++ b/styles/common.scss
@@ -418,12 +418,14 @@ a.link {
     h3 {
       font-size: $font-size-lg;
     }
+    .excerpt {
+      max-height: 15rem;
+      overflow-y: scroll;
+    }
     p {
       font-size: $font-size-base;
       color: $silver;
       line-height: 1.8;
-      max-height: rem(220);
-      overflow-y: scroll;
     }
     .head {
       border-bottom: 1px solid $grey;
