新闻列表的标签动态宽度

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -527,6 +527,7 @@ a.link {
   a {
     // width: 6rem;
     height: 2rem;
+    margin-right: 1.5rem;
     text-decoration: underline;
     color: $dark-grey;
     font-weight: $font-weight-light;
