查看次数等位置样式调整

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -923,6 +923,7 @@ a.link {
       }
       .time {
         font-size: $font-size-base;
+        font-weight: $font-weight-light;
         color: $silver;
       }
       .tag {
