--- a/styles/common.scss
+++ b/styles/common.scss
@@ -766,13 +766,13 @@ a.link {
 .work-upload {
   > div {
     padding: 0 10px;
-    height: 10rem;
+    //height: 10rem;
     &.dashed {
       border: 1px dashed $input-border-color;
     }
   }
   .upload-container {
-    height: 10rem;
+    height: 19.375rem;
     position: relative;
     .fa-plus {
       font-size: 1.3rem;
@@ -796,7 +796,7 @@ a.link {
 
 .work-desc {
   textarea {
-    height: 15rem;
+    height: 23rem;
   }
   > div {
     position: relative;
@@ -1376,6 +1376,12 @@ a.link {
         height: auto;
       }
     }
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  .work-desc textarea {
+    height: 15rem;
   }
 }
 
