--- a/styles/common.scss
+++ b/styles/common.scss
@@ -138,6 +138,13 @@ span.entry-subtitle {
       bottom: -.4rem;
     }
   }
+  .work-desc {
+    div {
+      .poster {
+        height: 200px;
+      }
+    }
+  }
 }
 
 a.link {
@@ -801,11 +808,9 @@ a.link {
   > div {
     position: relative;
     .poster {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
+      position: relative;
+      height: 435px;
+      margin-bottom: 3rem;
       i {
         font-size: 1.4rem;
       }
@@ -1379,9 +1384,42 @@ a.link {
   }
 }
 
-@include media-breakpoint-down(lg) {
-  .work-desc textarea {
-    height: 15rem;
+@include media-breakpoint-down(sm) {
+  .work-desc {
+    div {
+      .poster {
+        height: 389px;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-only(md) {
+  .work-desc {
+    div {
+      .poster {
+        height: 255px;
+      }
+    }
+  }
+  .work-upload .upload-container {
+    height: 478px;
+  }
+}
+
+@include media-breakpoint-only(lg) {
+  .work-desc {
+    textarea {
+      height: 15rem;
+    }
+    div {
+      .poster {
+        height: 345px;
+      }
+    }
+  }
+  .work-upload .upload-container {
+    height: 243px;
   }
 }
 
