fix: 尝试修复作品图片删除按钮兼容性问题

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -784,12 +784,14 @@ a.link {
     .fa-plus {
       font-size: 1.3rem;
     }
-    .fa-trash-alt {
+    .delete-image {
       position: absolute;
       font-size: 1.3rem;
       right: .8rem;
       bottom: .8rem;
       z-index: 4;
+      background: none;
+      border: none;
       &:hover {
         cursor: pointer;
       }
