fix: 作品预览默认被评论遮住一部分

--- a/styles/customFancybox.scss
+++ b/styles/customFancybox.scss
@@ -39,6 +39,14 @@
   }
 }
 
+.fancybox-stage {
+  bottom: 3.5rem;
+}
+
+.fancybox-navigation button {
+  top: calc(50% - 1.75rem);
+}
+
 // confirm
 
 .fc-container .fancybox-bg {
