10强内轮次样式调整

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -351,7 +351,7 @@ a.link {
     h3 {
       font-weight: bold;
       color: $black;
-      min-height: 3rem;
+      //min-height: 3rem;
       font-size: $font-size-base;
     }
     .organizer {
@@ -426,7 +426,7 @@ a.link {
       font-size: $font-size-lg;
     }
     .excerpt {
-      max-height: 15rem;
+      max-height: 16.5rem;
       overflow-y: scroll;
     }
     p {
@@ -1087,7 +1087,7 @@ a.link {
     .card-body {
       h3 {
         font-size: rem(18);
-        //min-height: rem(30);
+        min-height: rem(30);
       }
       p {
         font-size: $font-size-xs;
