轮次页样式微调

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -433,6 +433,7 @@ a.link {
       font-size: $font-size-base;
       color: $silver;
       line-height: 1.8;
+      margin-bottom: 0;
     }
     .head {
       border-bottom: 1px solid $dark-yellow;
