竞赛详情所有缩进对称

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -969,7 +969,7 @@ a.link {
         }
       }
       .editor {
-        margin-left: 72px;
+        margin: 0 72px;
         padding-bottom: 20px;
       }
     }
@@ -1080,7 +1080,7 @@ a.link {
           }
         }
         .editor {
-          margin-left: rem(48);
+          margin: 0 rem(48);
         }
       }
     }
@@ -1297,7 +1297,7 @@ a.link {
           }
         }
         .editor {
-          margin-left: rem(20);
+          margin: 0 rem(20);
         }
       }
     }
