fix: 评论时间位置, 时区

--- a/styles/customFancybox.scss
+++ b/styles/customFancybox.scss
@@ -121,6 +121,8 @@
         .time {
           position: absolute;
           bottom: 0;
+          right: 0;
+          width: 7.228rem;
         }
       }
     }
